# mcd-data-science-intro

./: README.md  environment.yml  jobs_panama.csv  pyproject.toml
data/processed/: clientes_out.json
data/raw/: tutorial1_locales.json
notebooks/my_notebooks/: w2_jss_tarea1_jason_sepulveda.ipynb
notebooks/references/: 02_MCD3020_Tutorial2_Obligatoria.ipynb  03_MCD3020_Tutorial3_Obligatoria.ipynb  03_MCD3020_Webscraping_Obligatoria.ipynb  04_MCD3020_Clase4_webscrapping_Obligatoria.ipynb  05_MCD3020_Semana2_EjemplosComplementarios.ipynb  06_MCD3020_T1_enunciado.ipynb  MSD3020_tutorial1.ipynb
