[project]
name = "mcd-data-science-intro"
version = "0.1.0"
description = "Data Science Introduction for MCD"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "scikit-learn",
    "requests",
    "beautifulsoup4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
